--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     </div>
   </header>
 
+  <nav class="menu">
+    <button type="input">Opcion 1</button>
+    <button type="input">Opcion 2</button>
+    <button type="input">Opcion 3</button>
+    <button type="input">Opcion 4</button>
+  </nav>
+
   
-
-
   <footer>
     <div>
     </div>
