--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap</title>
+  <title>Web Personal</title>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
 
   <header>  
-    <div>
-    </div>
+      <nav>
+        <button type="input">Home</button>
+        <button type="input">About us</button>
+        <button type="input">Contacto</button>
+      </nav>
   </header>
 
-  <nav class="menu">
-    <button type="input">Opcion 1</button>
-    <button type="input">Opcion 2</button>
-    <button type="input">Opcion 3</button>
-    <button type="input">Opcion 4</button>
-  </nav>
+  <section>
+    <div class="main-section">
+    </div>
+  </section>
+
+  <section>
+    <div class="second-section">
+    </div>
+  </section>
+
+  
 
   
   <footer>
-    <div>
+    <div class="pie">
     </div>
   </footer>
 
 </body>
 </html>
-
-
 
 
 
