--- a/index.html
+++ b/index.html
@@ -4,32 +4,49 @@
   <title>Web Personal</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="estilo.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
 
-  <header>  
+  <header> 
+    <p>Web curriculum/</p><strong>Gerzain</strong>
       <nav>
         <button type="input">Home</button>
-        <button type="input">About us</button>
-        <button type="input">Contacto</button>
+        <button type="input">About me</button>
+        <button type="input">Contact</button>
       </nav>
   </header>
 
   <section>
     <div class="main-section">
+        <img class="perfil-photo" src="img/perfil.png">
+        <div class="info">
+          <h1><strong>Valdemar Gerzain Magaña Nicolás</strong></h1>
+          <big>Estudiante de la Universidad de Colima</big><br>
+          <small>Facultad de Telemática - Ingenieria de Software</small>
+        </div>
     </div>
   </section>
 
   <section>
     <div class="second-section">
+      <div class="description">
+        <p>
+          Hola, mi nombre es Gerzain!! tengo 19 años y actualmente curso el <strong>cuarto semestre</strong> de la carrera de ingenieroa de software en la <strong>Universidad de Colima</strong>
+          Gracias por acceder a mi perfil personal, te invito a que conozcas mas sobre mi y los planes que tengo para un futuro!!
+        </p>
+      </div>
     </div>
   </section>
 
   
-
-  
   <footer>
     <div class="pie">
+      <p>Networks</p>
+      <img src="img/instagram.png">
+      <img src="img/facebook.png">
+      <img src="img/github.png">
     </div>
   </footer>
 
