--- a/index.html
+++ b/index.html
@@ -20,23 +20,17 @@
 
   <section>
     <div class="main-section">
-        <img class="perfil-photo" src="img/perfil.png">
+        <img class="perfil-photo" src="img/perfil.jpg">
         <div class="info">
           <h1><strong>Valdemar Gerzain Magaña Nicolás</strong></h1>
           <big>Estudiante de la Universidad de Colima</big><br>
           <small>Facultad de Telemática - Ingenieria de Software</small>
+          <p>
+            Hola!! <strong>soy Gerzain</strong>, gracias por visitar mi perfil personal,
+            tengo 19 años, soy estudiante<br> y actualmente me encuentro cursando la <strong> ingenieria de software </strong> en la <strong>Universidad de Colima</strong><br>
+            Te invito a leer mas sobre mi!!
+          </p>
         </div>
-    </div>
-  </section>
-
-  <section>
-    <div class="second-section">
-      <div class="description">
-        <p>
-          Hola, mi nombre es Gerzain!! tengo 19 años y actualmente curso el <strong>cuarto semestre</strong> de la carrera de ingenieroa de software en la <strong>Universidad de Colima</strong>
-          Gracias por acceder a mi perfil personal, te invito a que conozcas mas sobre mi y los planes que tengo para un futuro!!
-        </p>
-      </div>
     </div>
   </section>
 
