--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <title>Web Personal</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="estilo.css">
-  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
@@ -24,7 +23,7 @@
         <div class="info">
           <h1><strong>Valdemar Gerzain Magaña Nicolás</strong></h1>
           <big>Estudiante de la Universidad de Colima</big><br>
-          <small>Facultad de Telemática - Ingenieria de Software</small>
+          <small>Facultad de Telemática - <strong>Ingenieria de Software</strong></small>
           <p>
             Hola!! <strong>soy Gerzain</strong>, gracias por visitar mi perfil personal,
             tengo 19 años, soy estudiante<br> y actualmente me encuentro cursando la <strong> ingenieria de software </strong> en la <strong>Universidad de Colima</strong><br>
@@ -33,17 +32,15 @@
         </div>
     </div>
   </section>
-
-  
+ 
   <footer>
     <div class="pie">
-      <p>Networks</p>
-      <img src="img/instagram.png">
-      <img src="img/facebook.png">
-      <img src="img/github.png">
+      <p>Contacto Ucol</p>
+      <a href="https://www.facebook.com/UdeC.oficial/"><img src="img/facebook.png"/></a>
+      <a href="https://www.ucol.mx/"><img src="img/www.png"/></a>
+      <a href=""><img src="img/phone.png"/>013123161000</a>
     </div>
   </footer>
-
 </body>
 </html>
 
