--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <title>Web Personal</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="estilo.css">
-  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/estilo.css">
+  <script type="js/modernizr.js"></script>
 </head>
 <body>
 
   <header> 
     <p>Web curriculum/</p><strong>Gerzain</strong>
       <nav>
-        <button type="input">Home</button>
-        <button type="input">About me</button>
-        <button type="input">Contact</button>
+        <button type="input" value="Home"onclick="location.href='index.html'">Home</button>
+        <button type="input" value="aboutme" onclick="location.href='html/aboutme.html'">About me</button>
+        <button type="input" value="contact" onclick="location.href='contact.html'">Contact</button>
       </nav>
   </header>
 
@@ -22,7 +22,7 @@
         <img class="perfil-photo" src="img/perfil.jpg">
         <div class="info">
           <h1><strong>Valdemar Gerzain Magaña Nicolás</strong></h1>
-          <big>Estudiante de la Universidad de Colima</big><br>
+          <strong>Estudiante de la Universidad de Colima</strong><br>
           <small>Facultad de Telemática - <strong>Ingenieria de Software</strong></small>
           <p>
             Hola!! <strong>soy Gerzain</strong>, gracias por visitar mi perfil personal,
