Parte de información terminada

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <p>Web profile/</p><strong>Gerzain</strong>
-    <img src="img/perfil.jpg">
+    <a href="index.html"><img src="img/perfil.jpg"></a>
   </header>
 
   <div class="principal">
@@ -58,12 +58,10 @@
 
       <section class="info-right">
         <h3>Estudios</h3>
-        <h4>Secundaria</h4>
-        <p id="sub">Sec.Miguel Virgen Morfin # 13</p>
         <h4>Bachillerato</h4>
         <p id="sub">Bachillerato #25 UDC</p>
-        <p>Durante la prepa estuve en el área de analista programador, fue ahi donde encontré el gusto por la programación y la decisión de estudiar esta carrera!!</p>
-        <p>Materias</p>
+        <p>Durante la prepa estuve en el área de <strong>analista programador</strong>, fue ahi donde encontré el gusto por la programación, antes de eso nunca había programado nada, sin embargo pasaba mucho tiempo en <strong>internet</strong> como cualquier otro en ese tiempo, despúes tome la decisión de estudiar esta carrera!!</p>
+        <p><strong>Algunas materias cursadas</strong></p>
         <ul>
           <li>
             Programación Básica
@@ -78,21 +76,19 @@
               HTML-CSS-PHP
             </ul>
           </li>
-          <li>
-            Bases de datos
-            <ul>
-              MySQL-PHPMyAdmin
-            </ul>
-          </li>
           <li>Photoshop</li>
         </ul> 
-        
       </section>
 
       <section class="info-left1">
         <h3>Tecnologías de Interes</h3>
         <h4>Desarrollo Web</h4>
-        <p>Personalmente me gustaría dedicarme al desarrollo web, aunque por el momento no tengo bien definido a cual de las partes, backend o fronted</p>
+        <p>Personalmente me gustaría dedicarme al <strong>desarrollo web</strong>, aunque por el momento no tengo bien definido a cual de las partes, <strong>Backend/Fronted</strong>, desarrollador de pila completa. Menciono esto por que es lo que actualmente me gusta y no tengo experiencia en otro tipo de desarrollo</p>
+        <img class="img-tech1" src="img/backend.png">
+        <img class="img-tech" src="img/frontend.png">
+
+        <h4>Desarrollo Móvil</h4>
+        <p>El desarrollo par dispositivos móviles es algo que me ha llamado la atención desde hace tiempo, pero no he tenido la oportunidad de realizar algo relacionado con este tipo de desarrollo, en algún futuro me gutaria conocer más y por que no, dedicarme de lleno a esto!!</p>
       </section>
       
     </div>
